# path-tracer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: micro_bench.cpp
cmake/: sanitizer.cmake
data/: sample_layout.txt  sample_rule_1.txt  sample_rule_2.txt  sample_rule_3.txt
scripts/: build.sh  perf_multi.sh  perf_single.sh  run.sh
src/: main.cpp
src/cli/: args.h
src/core/: layout_model.h  result_model.h  rule_model.h  types.h
src/geom/: cutter.cpp  cutter.h  grid_index.cpp  grid_index.h  intersect.cpp  intersect.h  manhattan_poly.cpp  manhattan_poly.h  point_in_poly.cpp  point_in_poly.h
src/io/: layout_reader.cpp  layout_reader.h  result_writer.cpp  result_writer.h  rule_reader.cpp  rule_reader.h
src/parallel/: par_algos.cpp  par_algos.h  thread_pool.h
src/trace/: flood_fill.cpp  flood_fill.h  gate_rule.cpp  gate_rule.h  pipeline.cpp  pipeline.h  ufds.cpp  ufds.h  via_graph.cpp  via_graph.h
src/utils/: logging.h  small_vec.h  span.h  timer.h
tests/: CMakeLists.txt
